<resources>
    <string name="app_name">Basic Calendar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

    <string name="jan">January</string>
    <string name="fab">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
</resources>