<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:ignore="HardcodedText">

    <!-- Left Arrow Button -->
    <!-- android:background="?android:attr/selectableItemBackground"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageButton
            android:id="@+id/btnPrevMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/month_navigator_shape"
            android:contentDescription="Previous Month"
            android:src="@drawable/ic_arrow_left" />

        <!-- Month & Year TextView -->
        <TextView
            android:id="@+id/tvMonthYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="October 2024"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Right Arrow Button -->
        <ImageButton
            android:id="@+id/btnNextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/month_navigator_shape"
            android:contentDescription="Next Month"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/day_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_4sdp"
        android:paddingVertical="@dimen/_4sdp"
        android:weightSum="7">

        <TextView
            android:id="@+id/tvMon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvTue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvWed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvThu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thu"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvFri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvSat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvSun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_calender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/month_navigator_shape"
        android:padding="@dimen/_4sdp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/month_navigator_shape"
        android:padding="@dimen/_4sdp" />

</LinearLayout>
